Add aoc files